<resources>
    <string name="app_name">LightWeightShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_here">New to here?</string>
    <string name="cap_continue">Continue</string>
    <string name="message">Message</string>
    <string name="coroutine">Coroutine</string>
    <string name="result">Result</string>
    <string name="get_result">Get result</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="service">Service</string>
    <string name="text">Text</string>
    <string name="ui">UI</string>
    <string name="button">Button</string>
    <string name="indicator">Indicator</string>
    <string name="data_time">Data-Time</string>
    <string name="setup">SetUp</string>
    <string name="punchline">Punchline</string>
    <string name="get_joke">Get Joke</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

</resources>